--- a/style.css
+++ b/style.css
@@ -1,347 +1,380 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #F2F4FC;
-    margin-top: 90px;
-    margin-left: 250px;
-    margin-right: 250px;
-}
-#nav{
-    display:flex;
-    
-    align-items: center;
-    height: 30px;
-    justify-content: space-between;
-    margin-bottom: 100px;
-    
+  font-family: "Roboto", sans-serif;
+  background-color: #f2f4fc;
+  margin-top: 90px;
+  margin-left: 250px;
+  margin-right: 250px;
 }
 
-.nav-bar-ul{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    list-style: none;
-    width: 220px;
+@media only screen and (max-width: 600px) {
+  body {
+    font-family: "Courier New", Courier, monospace;
+  }
 }
-#nav li:first-child{
-    color: #072AC8;
+#nav {
+  display: flex;
+
+  align-items: center;
+  height: 30px;
+  justify-content: space-between;
+  margin-bottom: 100px;
 }
 
-#nav div a{
-    background-color: #072AC8;
-    color:white;
-    list-style: none;
-    padding:12px 30px;
-    text-decoration: none;
+.nav-bar-ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style: none;
+  width: 220px;
 }
-#header{
-    margin-bottom: 150px;
-}
-#header article h1{
-    font-size: 80px;
-}
-#header article p{
-    font-size: 26px;
+#nav li:first-child {
+  color: #072ac8;
 }
 
-
-.button{
-     background-color: #072AC8;
-    color:white;
-    list-style: none;
-    padding:12px 30px;
-    text-decoration: none;
-    margin-left: 10px;
-    
+#nav div a {
+  background-color: #072ac8;
+  color: white;
+  list-style: none;
+  padding: 12px 30px;
+  text-decoration: none;
 }
-.touch{
-    text-decoration: none;
-    color:#6B708D;
+#header {
+  margin-bottom: 150px;
 }
-#header article div{
-    margin-top: 60px;
+#header article h1 {
+  font-size: 80px;
 }
-
-
-.container-hero{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    
-}
-.container-img{
-    position:relative;
-    width:700px;
-    height: 750px;
-
+#header article p {
+  font-size: 26px;
 }
 
-.img1{
-    height: 325px;
-    position: absolute;
-    z-index: 1;
+.button {
+  background-color: #072ac8;
+  color: white;
+  list-style: none;
+  padding: 12px 30px;
+  text-decoration: none;
+  margin-left: 10px;
 }
-.img2{
-    height: 750px;
-    position: absolute;
-    
+.touch {
+  text-decoration: none;
+  color: #6b708d;
 }
-.img3{
-    z-index: 1;
-    height: 290px;
-    position: absolute;
-    bottom: 0; /*esto indica lo que se separa del bottom*/
-    left: 500px; /*esto indica lo que se separa de la izquierda*/
+#header article div {
+  margin-top: 60px;
 }
 
+.container-hero {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.container-img {
+  position: relative;
+  width: 700px;
+  height: 750px;
+}
 
-#client{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 70px;
-    margin-bottom: 200px;
-    
+.img1 {
+  height: 325px;
+  position: absolute;
+  z-index: 1;
+}
+.img2 {
+  height: 750px;
+  position: absolute;
+}
+.img3 {
+  z-index: 1;
+  height: 290px;
+  position: absolute;
+  bottom: 0; /*esto indica lo que se separa del bottom*/
+  left: 500px; /*esto indica lo que se separa de la izquierda*/
+}
+
+#client {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 70px;
+  margin-bottom: 200px;
 }
 /* utilizo comando filter para cambiar a escala de grises  las imagenes */
-#client img{    
-    -webkit-filter: grayscale(1); 
-    filter: gray; 
-    filter: grayscale(1); 
+#client img {
+  -webkit-filter: grayscale(1);
+  filter: gray;
+  filter: grayscale(1);
 }
-
 
 /* SECCION PROYECTOS */
-#projects h2{
-    font-size: 50px;
-    margin-top: 150px;
+#projects h2 {
+  font-size: 50px;
+  margin-top: 150px;
 }
 
-#projects div{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
+#projects div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.tarjeta{
-    background-color: white;
-    height: 510px;
-    display: flex; 
-    flex-direction: column;
-}
-
-.text-tarjeta{
-    font-size: 25px;
-    padding-left: 30px;
-    padding-top: 25px;
+.tarjeta {
+  background-color: white;
+  height: 510px;
+  display: flex;
+  flex-direction: column;
 }
 
-.text-tarjeta2{
-    font-size: 15px;
-    padding-left: 30px;
-    padding-top: 0px;
-    color:#6B708D
+.text-tarjeta {
+  font-size: 25px;
+  padding-left: 30px;
+  padding-top: 25px;
 }
 
-
-.tarjeta img{
-    height: 300px;
-    width: 420px;
+.text-tarjeta2 {
+  font-size: 15px;
+  padding-left: 30px;
+  padding-top: 0px;
+  color: #6b708d;
 }
 
-.link-project{
-    text-decoration: none;
-    color:#072AC8;
-    margin-left: 30px;
-    padding-top: 40px;
+.tarjeta img {
+  height: 300px;
+  width: 420px;
 }
 
-
+.link-project {
+  text-decoration: none;
+  color: #072ac8;
+  margin-left: 30px;
+  padding-top: 40px;
+}
 
 /* SECTION 3 TESTIMONIAL */
 
 #testimonial {
-    margin-top: 100px;
-    background-color: #292e47;
-    background-image: url("Información de Proyecto/testimonial-section/orbit.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    display:flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 500px;
+  margin-top: 100px;
+  background-color: #292e47;
+  background-image: url("Información de Proyecto/testimonial-section/orbit.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 500px;
 }
 
-.test{
-    display: flex;
-    justify-content: space-between;
-    
+.test {
+  display: flex;
+  justify-content: space-between;
 }
 
-.text1{
-    color:white;
-    font-size: 40px;
+.text1 {
+  color: white;
+  font-size: 40px;
 }
-.quote{
-    display: flex;
-    text-align: center;
-    justify-content: center;
+.quote {
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
-.text2{
-    color:#FFC600;  
-    font-size:20px
+.text2 {
+  color: #ffc600;
+  font-size: 20px;
 }
-.img-face{
-    height: 150px;
-    
+.img-face {
+  height: 150px;
 }
-.img-face-circ{
-    border-radius: 50%;
-    height: 100px;
+.img-face-circ {
+  border-radius: 50%;
+  height: 100px;
 }
 
-.test div{
-    display: flex;
+.test div {
+  display: flex;
 }
 .test div div {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-.test div div h4{
-    color:#A2D6F9;
+.test div div h4 {
+  color: #a2d6f9;
 }
 
-.test div div h5{
-    color:white;
+.test div div h5 {
+  color: white;
 }
 
 /* SECTION 4 SERVICES */
-#services{
-    margin-top: 100px;
-    margin-bottom: 100px;
-    
+#services {
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
-#services div{
-    display: flex;
-    justify-content: space-around;
+#services div {
+  display: flex;
+  justify-content: space-around;
 }
-#services article{
-    background-color: white;
-    height: 350px;
-    width: 300px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 40px;
-}
-
-#services article h2{
-    font-size: 20px;
+#services article {
+  background-color: white;
+  height: 350px;
+  width: 300px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;
 }
 
-#services h1{
-    font-size: 50px;
-}
-.img-services{
-    padding:20px 20px 20px 20px;
-    margin-top: 40px;
-    margin-left:40px;
-    height: 50px;
-    width: 50px;
-    background-color: #ECF7FF;
-    border-radius: 50%;
+#services article h2 {
+  font-size: 20px;
 }
 
-#services article h2{
-    font-size: 25px;
-    font-weight: bold;
+#services h1 {
+  font-size: 50px;
+}
+.img-services {
+  padding: 20px 20px 20px 20px;
+  margin-top: 40px;
+  margin-left: 40px;
+  height: 50px;
+  width: 50px;
+  background-color: #ecf7ff;
+  border-radius: 50%;
 }
 
-.link-btn{
-    
-    text-decoration: none;
-    
+#services article h2 {
+  font-size: 25px;
+  font-weight: bold;
 }
 
+.link-btn {
+  text-decoration: none;
+}
 
 /* SECTION 5 CTA */
-#cta{
-    background-color:#FDC600 ;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    padding-bottom: 120px;
-    padding-top: 90px;
-    margin-bottom: 170px;
-    margin-top: 170px;
+#cta {
+  background-color: #fdc600;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding-bottom: 120px;
+  padding-top: 90px;
+  margin-bottom: 170px;
+  margin-top: 170px;
 }
-#cta h1{
-    font-size:40px
-}
-
-.placeholder{
-    padding: 20px 90px 20px 20px;
+#cta h1 {
+  font-size: 40px;
 }
 
-.button-subscribe{
-    margin-top: 30px;
-    background-color: #072AC8;
-    color:white;
-    list-style: none;
-    padding:22px 40px 22px 40px;
-    text-decoration: none;
-    margin-left: 10px;
-    border:none;
+.placeholder {
+  padding: 20px 90px 20px 20px;
 }
 
+.button-subscribe {
+  margin-top: 30px;
+  background-color: #072ac8;
+  color: white;
+  list-style: none;
+  padding: 22px 40px 22px 40px;
+  text-decoration: none;
+  margin-left: 10px;
+  border: none;
+}
 
 /* FOOTER */
 
-#footer{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-bottom: 50px;
+#footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-bottom: 50px;
+  margin-top: 100px;
 }
-#footer img{
-    margin-bottom: 20px;
-    height: 35px;
+#footer img {
+  margin-bottom: 20px;
+  height: 35px;
 }
-#footer address{
-    font-style:normal;
-    color:#6B708D
+#footer address {
+  font-style: normal;
+  color: #6b708d;
 }
-.space a{
-    padding:50px;
-    text-decoration: none;
-}
-
-.space{
-    padding: 20px;
+.space a {
+  padding: 50px;
+  text-decoration: none;
 }
 
-
+.space {
+  padding: 20px;
+}
 
 /* ESTILOS PROJECT PAGE */
 
-.style-h1{
-    font-size: 70px;
+.style-h1 {
+  font-size: 70px;
 }
 
-#simplify{
-    margin-top: 160px;
+#simplify {
+  margin-top: 160px;
 }
 
-#simplify div div{
-    display:flex;
-    justify-content: space-between;
+#simplify div div {
+  display: flex;
+  justify-content: space-between;
 }
 
-#simplify div img{
-    height: 976px;
-    width: 1410px;
+#simplify img {
+  margin-bottom: 45px;
+}
+#simplify div img {
+  height: 976px;
+  width: 1410px;
 }
 
-.text{
-    color:#6B708D;
-    font-size:15px;
+.text {
+  color: #6b708d;
+  font-size: 20px;
+}
+
+/* SECTION CONTACT */
+
+.placeholder1 {
+  width: 1375px;
+  background-color: #ededed;
+  padding: 20px;
+  border: 0;
+  margin-top: 10px;
+}
+
+.email1 {
+  margin-top: 10px;
+  width: 642px;
+  background-color: #ededed;
+  padding: 20px;
+  margin-right: 45px;
+  border: 0;
+}
+
+.flex {
+  margin-top: 20px;
+  display: flex;
+}
+
+.text-contact {
+  font-size: 80px;
+  padding-top: 60px;
+}
+
+.textarea {
+  margin-top: 10px;
+  background-color: #ededed;
+  border: 0;
+}
+.submit {
+  margin-top: 20px;
+  color: white;
+  border: 0;
+  border-radius: 0;
+  background-color: #072acb;
+  width: 1415px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
